--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         </section>
         <nav class="categorias">
-            <a href="https://google.com" class="btn-cat">
+            <a href="resto1.html" class="btn-cat">
                 <i class="iconos f20">ramen_dining</i>
                 Chinese
             </a>
@@ -77,7 +77,7 @@
         <section class="restaurantes">
 
             
-            <article class="resto">
+            <a class="resto" href="resto1.html">
 
                 <div class="imagen_resto"></div>
 
@@ -107,7 +107,7 @@
                 <div class="puntuacion">4.7</div>
                 <div class="distancia"> 3KM</div>
 
-            </article>
+            </a>
             <article class="resto">
 
                 <div class="imagen_resto"></div>
