--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@
     <main class="menuResto">
         <!-- -----inicio plato-------- -->
         
-            <a href="resto1.html" class="plato">
+            <a href="plato_1.html" class="plato">
                 <div class="img_plato">
                     <img src="img/plato2.jpg" alt="" height="100">
                     <div class="precio_plato">$7,99</div>
