--- a/plato_1.html
+++ b/plato_1.html
@@ -39,7 +39,7 @@
 
     <nav class="agregarCarrito">
         <div class="flex">
-            <button id="restar" class="iconos botonCarrito">remove</button>
+            <button class="iconos botonCarrito" onclick="restar">remove</button>
             <p class="botonCarrito" id="cantidad">2</p>
             <button id="sumar" class="iconos botonCarrito">add</button>
         </div>
