--- a/plato_1.html
+++ b/plato_1.html
@@ -26,7 +26,7 @@
             </div>
             <div class="puntuResto">
 
-                $45558,99</div>
+                </div>
         </section>
         <br><br>
         <section class="descResto gris_txt">
@@ -39,12 +39,21 @@
 
     <nav class="agregarCarrito">
         <div class="flex">
-            <button class="iconos botonCarrito" onclick="restar">remove</button>
-            <p class="botonCarrito" id="cantidad">2</p>
-            <button id="sumar" class="iconos botonCarrito">add</button>
+            <div class="flex">
+                <button id="restar" class="iconos botonCarrito" onclick="restar()">remove</button>
+
+                <p class="botonCarrito" id="cantidad"></p>
+
+                <button id="sumar" class="iconos botonCarrito" onclick="sumar()">add</button>
+
+            </div>
+            <button class="btnAgregar"><i class="iconos">post_add</i>Agregar al pedido</button>
         </div>
-        <button class="btnAgregar"><i class="iconos">post_add</i>Agregar al pedido</button>
+
+
+        <span id="subtotal">ddd</span>
     </nav>
+
 
 
     <!-- <nav class="menuinferior">
@@ -55,6 +64,7 @@
      -->
 
     <script src="js/actions.js"></script>
+    <script src="js/leerjson.js"></script>
 </body>
 
 </html>
