--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <section class="restaurantes">
 
             
-            <a class="resto" href="resto1.html">
+            <!-- <a class="resto" href="resto1.html">
 
                 <div class="imagen_resto"></div>
 
@@ -107,19 +107,14 @@
                 <div class="puntuacion">4.7</div>
                 <div class="distancia"> 3KM</div>
 
-            </a>
-            <article class="resto">
-
-                <div class="imagen_resto"></div>
-
-                <div class="desc_resto"></div>
-
-            </article>
-
+            </a> -->
+         
         </section>
     </main>
 
-
+<script src="js/leerjson.js"></script>
+<script src="js/puntuacion.js"></script>
 </body>
 
 </html>
+
