--- a/plato_1.html
+++ b/plato_1.html
@@ -7,6 +7,7 @@
     <title>Bodegones 4.0 - La Tablita - Ravioles</title>
     <link rel="stylesheet" href="css/material-icons.css">
     <link rel="stylesheet" href="css/bodegones.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
 
 </head>
 
