--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         </section>
     </main>
 
-<script src="js/leerjson.js"></script>
-<script src="js/puntuacion.js"></script>
+<script src="js/leerrr.js"></script>
+<!-- <script src="js/puntuacion.js"></script> -->
 </body>
 
 </html>
